--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=car-management-api
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.url=jdbc:h2:file:./database/carManagement.db
@@ -9,5 +9,5 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.dll-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
