--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.url=jdbc:h2:file:./database/carManagement.db
 
+server.port=8088
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
